--- a/facerecoproj/templates/index.html
+++ b/facerecoproj/templates/index.html
@@ -1,12 +1,84 @@
+<html>
+
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5">JAY SHREE RAM</h3>
-                <img src="{{ url_for('video_feed') }}" width="40%">
-                <img src="{{ url_for('static', filename = static_url ) }}" alt="User Image" width="40%"><br><br>
-                <a href="{{ url_for('upload') }}"> Upload </a>
+                <center>
+                    <div width="60%" height="100%">
+                        <img src="{{ url_for('video_feed') }}" id="image" width="60%" height="100%"><br>
+                    </div>
+                </center>
+            </div>
+            <div>
+                <!-- <img src="{{ url_for('static', filename = static_url ) }}" alt="User Image" width="40%"><br><br> -->
+                <center>
+                    <div class="col">
+                        <a href="{{ url_for('train_model') }}" class="btn btn-secondary"> Train Model </a><br>
+                    </div>
+                    <div class="col">
+                        <a href="{{ url_for('upload') }}" class="btn btn-warning"> Add Details </a><br>
+                    </div><br>
+                    <p id="user_confirm"></p>
+                    <div id="confirmation"></div>
+                    <div id="log"></div>
+                </center>
+                <p>
+                    {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                <ul class=flashes>
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+                {% endwith %}
+                </p>
             </div>
         </div>
-    </div>
-    </body>
+        <script src="https://code.jquery.com/jquery-3.6.0.js"
+            integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
+        <script type="text/javascript">
+            $.ajaxSetup({ cache: false })
+            setInterval(read, 2000);
+            console.log("Inside this script");
+            function read() {
+                jQuery.get('static/log.txt', function (data) {
+                    document.getElementById("log").innerHTML = data;
+                    if (document.getElementById("confirm_button") !== null) {
+                        document.getElementById("confirm_button").parentNode.removeChild(document.getElementById("confirm_button"));
+                    }
+                    btn = document.createElement("button");
+                    btn.id = "confirm_button";
+                    let log_arr = data.split("\n");
+                    log_arr.pop()
+                    console.log(log_arr)
+                    if (data.split("\n").length >= 3) {
+                        btn.setAttribute('onclick', "personConfirm('" + log_arr[log_arr.length-1] + "');");
+                        is_btn_present = document.querySelector("#confirmation");
+                        if (is_btn_present.childNodes.length === 0) {
+                            btn.innerHTML = "Confirm, it's you!";
+                            document.getElementById("confirmation").appendChild(btn);
+                        }
+                    }
+                });
+            }
+
+            function personConfirm(data) {
+                console.log("Inside Person Confirm", data);
+                document.getElementById("user_confirm").innerHTML = data;
+            }
+        </script>
+
+</html>
+</body>
