--- a/facerecoproj/templates/upload.html
+++ b/facerecoproj/templates/upload.html
@@ -6,6 +6,7 @@
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="../static/webcam.js"></script>
 </head>
 
 <body>
@@ -15,18 +16,23 @@
         </div>
         <div class="container">
             <div>
-                <form method="post" enctype="multipart/form-data">
-                    <img src="{{ url_for('static', filename = static_url ) }}" alt="User Image" width="40%"><br><br>
-                    <input type="text" hidden value={{static_url}} name="my_image">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" placeholder="Enter name" name="name">
-                    </div>
+                <h5>Capture a face image from Webcam</h5>
+                <div>
+                    <button onclick="startWebcam();" id="webcam" type="button" class="userbtn"
+                        value="Start WebCam">Start WebCam</button>
+                    <a href="javascript:void(take_snapshot())" class="userbtn" id="takeshot" style="display: none">Take
+                        Snapshot</a>
+                </div>
+                <scan id="my_camera"></scan>
+                <div id="cam_image"></div>
+                <input type="text" hidden value={{static_url}} name="my_image">
+                <div class="form-group">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" placeholder="Enter name" name="name">
+                </div>
 
-                    <button type="submit" class="btn btn-success">Submit</button>
-                </form>
-                </form>
-                <a href="{{ url_for('index') }}">go to</a>
+                <button type="submit" onclick="register()" class="btn btn-success">Submit</button>
+                <a href="{{ url_for('identify') }}">go to</a>
                 <p>
                     {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -51,6 +57,63 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <script>
+        function startWebcam() {
+            var elem = document.getElementById("webcam");
+            $('#takeshot').show();
+            if (elem.textContent == "Start WebCam") {
+                Webcam.attach('#my_camera');
+                elem.textContent = "Stop WebCam";
+            }
+            else {
+                Webcam.reset();
+                elem.textContent = "Start WebCam";
+            }
+        }
+
+        function take_snapshot() {
+            Webcam.snap(function (data_uri) {
+                console.log(data_uri)
+                document.getElementById('cam_image').innerHTML = '<img id="image" src="' + data_uri + '"/>';
+                $('#register').show();
+                $('#name').show();
+            });
+        }
+
+        Webcam.set({
+            width: 240,
+            height: 160,
+            dest_width: 240,
+            dest_height: 170,
+            image_format: 'jpeg',
+            jpeg_quality: 100
+        });
+
+        function register() {
+            console.log("Register new face...")
+            var image = document.getElementById('image').src;
+            var name = document.getElementById('name').value;
+            var formData = new FormData();
+            formData.append("data", image);
+            formData.append("name", name);
+            var xmlhttp = new XMLHttpRequest();
+            xmlhttp.open("POST", "/upload", true);
+
+            // check when state changes,
+            xmlhttp.onreadystatechange = function () {
+                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                    alert(xmlhttp.responseText);
+                }
+                else {
+                    console.log('status' + xmlhttp.status);
+                }
+            }
+            xmlhttp.send(formData);
+
+            // console.log(formData.get('data'));
+        }
+    </script>
 </body>
 
 </html>
